@@ -20,11 +20,14 @@ class Memory:
     def __init__(self, id, is_head) -> None:
         self.id = id
         self.is_head = is_head
-        self.graph = Graph()
+        self.graph_path = P.model_dir + "graph.pkl"
+        if P.load_graph:
+            self.graph = IO.read_disk_dump(self.graph_path)
+        else:
+            self.graph = Graph()
         self.new_trajs = list()
 
     def sync_by_pipe_disk(self, head_slave_queues, slave_head_queues, sync):
-        graph_path = P.model_dir + "graph.pkl"
         if not self.is_head:
             # write trajs (slave)
             slave_head_queues[self.id].put(self.new_trajs)
@@ -32,7 +35,7 @@ class Memory:
             self.new_trajs = list()
             ready = head_slave_queues[self.id].get()
             # read latest graph (slave)
-            self.graph = IO.read_disk_dump(graph_path)
+            self.graph = IO.read_disk_dump(self.graph_path)
             slave_head_queues[self.id].put(["finish"])
         else:
             # read trajs (head)
@@ -52,7 +55,7 @@ class Memory:
             self.graph.update_graph()
 
             # write latest graph (head)
-            IO.write_disk_dump(graph_path, self.graph)
+            IO.write_disk_dump(self.graph_path, self.graph)
             sync.value = False
             for i in range(P.num_actor):
                 if self.id == i:
@@ -65,12 +68,6 @@ class Memory:
                     continue
                 finished = slave_head_queues[i].get()
                 assert finished == ["finish"], "sync error"
-
-    def save(self):
-        # IO.write_disk_dump(P.optimal_graph_path, self.graph.get_q())
-        # IO.write_disk_dump(P.generated_dataset_path, self.graph.get_transition_dataset())
-        # TODO: save memory
-        Logger.log("memory saved", color="blue")
 
     def get_graph(self):
         return self.graph
@@ -99,6 +96,10 @@ class Memory:
         # filter trajs by min reward
         if P.min_traj_reward is not None:
             if total_reward < P.min_traj_reward:
+                return
+            
+        if P.reward_filter_ratio is not None:
+            if total_reward < P.reward_filter_ratio * self.graph.general_info["max_total_reward"]:
                 return
         self.new_trajs.append(amend_traj)
 
