@@ -1,19 +1,20 @@
 import sys
 from src.util.tools import IO, Logger
+import argparse
 
 
 class Context:
     # common
     work_dir = "./"
     asset_dir = work_dir + "assets/"
-    out_dir = f"{work_dir}output/{Logger.get_date()}/"
-    log_dir = out_dir + "log/"
-    summary_dir = out_dir + "summary/"
-    model_dir = out_dir + "model/"
-    result_dir = out_dir + "result/"
-    video_dir = out_dir + "video/"
-    env_dir = out_dir + "env/"
-    out_dirs = [out_dir, log_dir, result_dir, model_dir, video_dir, env_dir]
+    out_dir = None
+    log_dir = None
+    summary_dir = None
+    model_dir = None
+    result_dir = None
+    video_dir = None
+    env_dir = None
+    out_dirs = None
     gpus = [0]  # [0, 1]
     prio_gpu = gpus[0]  # first device in gpu list
     start_stage = [0, 1, 2][0]
@@ -59,11 +60,13 @@ class Context:
     projector = projector_types[0]
     projected_dim = 8
     projected_hidden_dim = 32
-    hashing = [False, True][0]
+    hashing = None
     # agent:policy:graph
+    load_graph = False
     max_node_draw = 500
     min_traj_reward = None
-    gamma = [0.99, 1][1]  # discount factor
+    reward_filter_ratio = None
+    gamma = None  # discount factor
     sync_every = 20  # in trajectories
     e_greedy = [0.1, 1]
     max_vp_iter = 1e8  # num or float("inf")
@@ -71,12 +74,12 @@ class Context:
 
 class Profile(Context):
     C = Context
-    
-    if len(sys.argv) < 1:
-        Logger.log("profile_id required")
-        exit(0)
 
-    current_profile = sys.argv[1]
+    parser = argparse.ArgumentParser(description='MemRL')
+    parser.add_argument('--profile', default=1, help='profile of the run')
+    args, unk_args = parser.parse_known_args()
+
+    current_profile = int(args.profile)
 
     if C.env_type == "football":
         C.num_actor = len(C.gpus) * 16
@@ -91,19 +94,18 @@ class Profile(Context):
         C.num_action_repeats = 1
         reward_type = ["scoring", "scoring,checkpoints"][1]
     if C.env_type == "atari":
-        C.total_frames = [1e7, 5e6, 1e6, 1e5][0]  # default 1e7
-        # C.num_actor = len(C.gpus) * 4
+        C.total_frames = [1e7, 5e6, 1e6, 1e5][2]  # default 1e7
         C.num_actor = len(C.gpus) * 8
         C.head_actor = C.num_actor - 1
-        # C.projector = C.projector_types[4]
         C.projector = C.projector_types[1]
         C.target_total_rewrad = None
         C.hashing = True
         C.min_traj_reward = None
-        C.gamma = [0.99, 1, 1 - 1e-8][1]
+        C.gamma = [0.99, 1, 1 - 1e-8][2]
         C.num_action_repeats = 4  # equivelent to frame skip
         C.e_greedy = [0.1, 1]
         C.stick_on_graph = 0.0
+        C.reward_filter_ratio = 0.0
         max_train_episode_steps = [108000, 1000, 27000][0]
         max_eval_episode_steps = [108000, 1000, 27000][0]
         stack_frames = 4
@@ -111,5 +113,11 @@ class Profile(Context):
         sticky_action = False
     
     C.env_name = IO.read_file(f"{C.asset_dir}{C.env_type}.txt")[int(current_profile)]
-
-    C.optimal_graph_path = f'{C.model_dir}{C.env_name}-optimal.pkl'
+    C.out_dir = f"{C.work_dir}output/{C.env_type}-{C.env_name}/"
+    C.log_dir = C.out_dir + "log/"
+    C.summary_dir = C.out_dir + "summary/"
+    C.model_dir = C.out_dir + "model/"
+    C.result_dir = C.out_dir + "result/"
+    C.video_dir = C.out_dir + "video/"
+    C.env_dir = C.out_dir + "env/"
+    C.out_dirs = [C.out_dir, C.log_dir, C.result_dir, C.model_dir, C.video_dir, C.env_dir]
