@@ -861,6 +861,34 @@ class Test:
         for q in q_list:
             print(q.get())
 
+    def env_reproduce(self):
+        from src.module.env.atari import Atari
+        
+
+        env = Atari.make_env(render=False)
+
+        init_obs = env.environment.reset(seed=123)
+        print(Funcs.matrix_hashing(init_obs))  # 867b355fe78669d1888bcb1b6b048dfc6a15e43608237e30b888adf5ddcd6a5d
+
+        done = False
+        total_reward = 0
+        serial = ""
+        given_serial = "15,7,12,10,6,8,5,7,0,5,2,16,13,8,13,9,17,16,9,9,3,0,10,8,2,12,5,10,16,15,8,16,8,8,5,15,8,14,17,1,4,17,12,3,0,9,6,12,1,14,8,0,2,13,17,12,12,16,13,10,10,6,6,8,10,17,10,6,3,4,5,15,5,4,4,15,0,10,0,9,16,0,17,7,5,13,10,9,6,15,1,6,7,1,11,3,6,6,6,0,8,10,15,16,1,11,3,6,9,13,4,1,17,16,13,4,12,5,4,15,3,0,1,11,17,3,12,5,6,7,2,13,1,15,8,4,15,9,10,7,4,15,10,16,13,6,9,14,0,6,4,6,15,1,17,17,11,7,3,11,16,1,6,1,5,4,6,11,3,1,6,4,4,17,16,2,4,4,16,7,9,16,2,11,9,10,4,4,4,9,12,17,8,15,12,0,11,11,4,9,2,16,12,14,7,3,3,4,16,7,15,7,9,8,6,6,0,9,1,0,8,11,17,10,5,8,7,8,11,3,13,13,12,10,3,12,10,4,10,3,13,8,16,0,3,12,8,5,14,13,1,2,14,15,4,17,6,16,17,15,11,17,2,1,13,4,7,7,3,0,15,15,7,11,14,5,0,9,8,17,10,11,11,14,1,11,7,4,8,15,17,6,8,4,7,2,4,13,12,6,15,11,15,10,11,11,10,17,2,15,11,1,15,1,6,12,7,6,14,13,2,7,0,1,16,10,1,17,7,13,3,9,15,3,16,3,0,3,2,9,4,13,7,17,3,5,15,4,10,7,15,15,12,1,15,5,13,9,0,9,7,9,14,4,6,15,6,3,11,5,12,13,1,4,7,4,9,0,8,17,0,3,4,10,11,9,6,17,15,17,1,16,8,11,12,1,1,17,14,1,14,0,14,2,17,3,2,0,5,5,17,0,5,10,6,2,8,2,6,0,2,12,0,10,3,16,14,10,15,11,1,5,1,3,4,15,8,3,17,7,4,6,16,16,14,13,12,7,13,6,1,17,3,11,13,8,1,0,11,7,11,8,17,11,2,10,5,10,6,3,12,4,14,14,3,10,6,2,16,14,0,0,10,7,14,16,1,17,14,8,9,6,13,10,9,12,7,5,7,0,14,12,4,8,9,10,6,9,13,9,3,4,16,13,15,11,3,8,8,8,14,17,5,11,11,15,12,11,8,7,4,2,7,11,14,14,5,15,11,0,5,8,5,15,5,2,9,1,3,8,13,13,6,15,16,2,5,4,13,7,1,0,0,17,9,13,6,16,5,16,0,16,8,5,0,17,16,11,3,1,12,3,13,17,9,0,5,8,14,2,8,5,5,8,0,3,11,14,13,3,16,7,3,6,14,1,15,9,4,16,4,2,1,15,11,0,2,8,7,8,16,7,12,7,12,4,8,10,2,1,10,8,15,6,14,11,4,3,6,1,4,11,17,16,4,14,4,2,15,9,14,11,0,12,15,12,11,13,8,10,11,0,4,5,13,9,17,6,12,8,7,9,16,6,12,3,16,10,17,15,17,16,12,8,12,12,3,4,6,6,11,4,16,4,14,7,11,5,15,6,6,3,3,3,8,12,4,4,9,2,9,5,17,15,17,12,2,11,8,8,2,6,0"
+        ind = 0
+        while not done:
+            if given_serial != "":
+                action = int(given_serial.split(",")[ind])
+                ind += 1
+            else:
+                action = env.sample_action()
+            obs, reward, done, info = env.step(action)
+            serial += str(action) + ","
+            total_reward += reward
+        print(f"{total_reward} --- {serial}")
+        print(P.current_profile)
+
+
+
 
 
 if __name__ == "__main__":
@@ -895,7 +923,7 @@ if __name__ == "__main__":
     # test.football_env()
     # test.print_table_param()
     # test.test_join()
-    test.test_manager_queue()
+    test.env_reproduce()
 
 # from ctypes import sizeof
 # from src.util.imports.numpy import np
